--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,3 +71,38 @@ body{
     padding: 8px 8px;
     border-radius: 5px;
 }
+.slide{
+    width: 100%;
+    height: 250px;
+    background-color: yellowgreen;
+}
+.main-body{
+    width: 100%;  
+}
+.sub-body{
+   width: 100%;
+   height: 500px;
+   background-color: #c85a5a; 
+   display: flex;
+}
+.left-body{
+    width: 25%;
+    height: 500px;
+    background-color: antiquewhite;
+    display: flex;
+}
+li{
+    border: 1px solid black;
+    list-style-type: none;
+}
+.centre-body{
+    width:50%;
+    height: 500px;
+    background-color: aqua;
+    display: flex;
+}
+.right-body{
+    width: 25%;
+    height: 500px;
+    background-color: antiquewhite;
+}
